--- a/crates/aos-agent-sdk/Cargo.toml
+++ b/crates/aos-agent-sdk/Cargo.toml
@@ -8,8 +8,8 @@ publish = false
 path = "src/lib.rs"
 
 [[bin]]
-name = "session_reducer"
-path = "src/bin/session_reducer.rs"
+name = "session_workflow"
+path = "src/bin/session_workflow.rs"
 
 [[bin]]
 name = "session_event_echo"
@@ -22,6 +22,7 @@ serde = { version = "1", features = ["derive"] }
 serde_bytes = "0.11"
 serde_cbor = "0.11"
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
+sha2 = { version = "0.10", default-features = false }
 
 [dev-dependencies]
 aos-effects = { path = "../aos-effects" }
