--- a/crates/aos-smoke/fixtures/20-agent-session/air/manifest.air.json
+++ b/crates/aos-smoke/fixtures/20-agent-session/air/manifest.air.json
@@ -1,49 +1,46 @@
 {
   "$kind": "manifest",
+  "air_version": "1",
   "schemas": [
     { "name": "aos.agent/SessionId@1" },
     { "name": "aos.agent/RunId@1" },
-    { "name": "aos.agent/TurnId@1" },
-    { "name": "aos.agent/StepId@1" },
     { "name": "aos.agent/ToolBatchId@1" },
     { "name": "aos.agent/ToolCallStatus@1" },
     { "name": "aos.agent/ActiveToolBatch@1" },
-    { "name": "aos.agent/RunLease@1" },
     { "name": "aos.agent/ReasoningEffort@1" },
     { "name": "aos.agent/WorkspaceBinding@1" },
     { "name": "aos.agent/WorkspaceApplyMode@1" },
     { "name": "aos.agent/WorkspaceSnapshot@1" },
-    { "name": "aos.agent/WorkspaceSyncRequested@1" },
-    { "name": "aos.agent/WorkspaceSyncUnchanged@1" },
     { "name": "aos.agent/WorkspaceSnapshotReady@1" },
-    { "name": "aos.agent/WorkspaceSyncFailed@1" },
-    { "name": "aos.agent/WorkspaceApplyRequested@1" },
     { "name": "aos.agent/SessionConfig@1" },
     { "name": "aos.agent/RunConfig@1" },
     { "name": "aos.agent/SessionLifecycle@1" },
     { "name": "aos.agent/HostCommand@1" },
     { "name": "aos.agent/LlmToolCall@1" },
     { "name": "aos.agent/LlmToolCallList@1" },
-    { "name": "aos.agent/SessionEventKind@1" },
+    { "name": "aos.agent/SessionIngressKind@1" },
+    { "name": "aos.agent/SessionIngress@1" },
+    { "name": "aos.agent/PendingIntent@1" },
     { "name": "aos.agent/SessionState@1" },
-    { "name": "aos.agent/SessionEvent@1" }
+    { "name": "aos.agent/SessionNoop@1" },
+    { "name": "aos.agent/SessionWorkflowEvent@1" },
+    { "name": "sys/EffectReceiptEnvelope@1" },
+    { "name": "sys/EffectReceiptRejected@1" },
+    { "name": "sys/EffectStreamFrame@1" }
   ],
   "modules": [
     { "name": "demo/AgentSessionWorkflow@1" }
   ],
-  "plans": [],
   "caps": [],
   "policies": [],
   "effects": [],
-  "triggers": [],
   "routing": {
-    "events": [
+    "subscriptions": [
       {
-        "event": "aos.agent/SessionEvent@1",
-        "workflow": "demo/AgentSessionWorkflow@1"
+        "event": "aos.agent/SessionWorkflowEvent@1",
+        "module": "demo/AgentSessionWorkflow@1"
       }
     ],
     "inboxes": []
-  },
-  "air_version": "1"
+  }
 }
