--- a/crates/aos-agent-sdk/air/manifest.air.json
+++ b/crates/aos-agent-sdk/air/manifest.air.json
@@ -40,8 +40,9 @@
   "routing": {
     "subscriptions": [
       {
-        "event": "aos.agent/SessionWorkflowEvent@1",
-        "module": "aos.agent/SessionWorkflow@1"
+        "event": "aos.agent/SessionIngress@1",
+        "module": "aos.agent/SessionWorkflow@1",
+        "key_field": "session_id"
       }
     ],
     "inboxes": []
