--- a/apps/demiurge/workflow/Cargo.toml
+++ b/apps/demiurge/workflow/Cargo.toml
@@ -11,3 +11,5 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 aos-agent-sdk = { path = "../../../crates/aos-agent-sdk" }
 aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
+serde = { version = "1", default-features = false, features = ["derive"] }
+serde_cbor = { version = "0.11", default-features = false }
