--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -75,6 +75,10 @@ name = "workspace_e2e"
 path = "tests_e2e/workspace_e2e.rs"
 
 [[test]]
+name = "process_adapter_e2e"
+path = "tests_e2e/process_adapter_e2e.rs"
+
+[[test]]
 name = "adapters_llm_live"
 path = "tests_live/adapters_llm_live.rs"
 required-features = ["adapter-llm"]
