--- a/crates/aos-host/Cargo.toml
+++ b/crates/aos-host/Cargo.toml
@@ -75,8 +75,8 @@ name = "workspace_e2e"
 path = "tests_e2e/workspace_e2e.rs"
 
 [[test]]
-name = "process_adapter_e2e"
-path = "tests_e2e/process_adapter_e2e.rs"
+name = "host_adapter_e2e"
+path = "tests_e2e/host_adapter_e2e.rs"
 
 [[test]]
 name = "adapters_llm_live"
