--- a/apps/demiurge/air/manifest.air.json
+++ b/apps/demiurge/air/manifest.air.json
@@ -6,7 +6,20 @@
     { "name": "aos.agent/RunId@1" },
     { "name": "aos.agent/ToolBatchId@1" },
     { "name": "aos.agent/ToolCallStatus@1" },
+    { "name": "aos.agent/ToolExecutor@1" },
+    { "name": "aos.agent/ToolAvailabilityRule@1" },
+    { "name": "aos.agent/ToolParallelismHint@1" },
+    { "name": "aos.agent/ToolSpec@1" },
+    { "name": "aos.agent/HostSessionStatus@1" },
+    { "name": "aos.agent/ToolRuntimeContext@1" },
+    { "name": "aos.agent/EffectiveTool@1" },
+    { "name": "aos.agent/EffectiveToolSet@1" },
+    { "name": "aos.agent/ToolCallObserved@1" },
+    { "name": "aos.agent/PlannedToolCall@1" },
+    { "name": "aos.agent/ToolExecutionPlan@1" },
+    { "name": "aos.agent/ToolBatchPlan@1" },
     { "name": "aos.agent/ActiveToolBatch@1" },
+    { "name": "aos.agent/ToolOverrideScope@1" },
     { "name": "aos.agent/ReasoningEffort@1" },
     { "name": "aos.agent/WorkspaceBinding@1" },
     { "name": "aos.agent/WorkspaceApplyMode@1" },
@@ -16,13 +29,12 @@
     { "name": "aos.agent/RunConfig@1" },
     { "name": "aos.agent/SessionLifecycle@1" },
     { "name": "aos.agent/HostCommand@1" },
-    { "name": "aos.agent/LlmToolCall@1" },
-    { "name": "aos.agent/LlmToolCallList@1" },
     { "name": "aos.agent/SessionIngressKind@1" },
     { "name": "aos.agent/SessionIngress@1" },
     { "name": "aos.agent/PendingIntent@1" },
     { "name": "aos.agent/SessionState@1" },
     { "name": "aos.agent/SessionNoop@1" },
+    { "name": "aos.agent/SessionWorkflowEvent@1" },
     { "name": "sys/SecretRef@1" },
     { "name": "sys/TextOrSecretRef@1" },
     { "name": "sys/BytesOrSecretRef@1" },
