--- a/apps/demiurge/workflow/Cargo.toml
+++ b/apps/demiurge/workflow/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2024"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-aos-agent-sdk = { path = "../../../crates/aos-agent-sdk" }
+aos-agent = { path = "../../../crates/aos-agent" }
 aos-wasm-sdk = { path = "../../../crates/aos-wasm-sdk" }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_cbor = { version = "0.11", default-features = false }
