--- a/crates/aos-agent/air/manifest.air.json
+++ b/crates/aos-agent/air/manifest.air.json
@@ -46,7 +46,19 @@
   "caps": [],
   "policies": [],
   "effects": [
-    { "name": "sys/llm.generate@1" }
+    { "name": "sys/llm.generate@1" },
+    { "name": "sys/host.session.open@1" },
+    { "name": "sys/host.exec@1" },
+    { "name": "sys/host.session.signal@1" },
+    { "name": "sys/host.fs.read_file@1" },
+    { "name": "sys/host.fs.write_file@1" },
+    { "name": "sys/host.fs.edit_file@1" },
+    { "name": "sys/host.fs.apply_patch@1" },
+    { "name": "sys/host.fs.grep@1" },
+    { "name": "sys/host.fs.glob@1" },
+    { "name": "sys/host.fs.stat@1" },
+    { "name": "sys/host.fs.exists@1" },
+    { "name": "sys/host.fs.list_dir@1" }
   ],
   "routing": {
     "subscriptions": [
