--- a/crates/aos-agent/air/manifest.air.json
+++ b/crates/aos-agent/air/manifest.air.json
@@ -32,6 +32,11 @@
     { "name": "aos.agent/SessionIngressKind@1" },
     { "name": "aos.agent/SessionIngress@1" },
     { "name": "aos.agent/PendingIntent@1" },
+    { "name": "aos.agent/PendingBlobGetKind@1" },
+    { "name": "aos.agent/PendingBlobGet@1" },
+    { "name": "aos.agent/PendingBlobPutKind@1" },
+    { "name": "aos.agent/PendingBlobPut@1" },
+    { "name": "aos.agent/PendingFollowUpTurn@1" },
     { "name": "aos.agent/SessionState@1" },
     { "name": "aos.agent/SessionNoop@1" },
     { "name": "aos.agent/SessionWorkflowEvent@1" },
@@ -46,6 +51,8 @@
   "caps": [],
   "policies": [],
   "effects": [
+    { "name": "sys/blob.put@1" },
+    { "name": "sys/blob.get@1" },
     { "name": "sys/llm.generate@1" },
     { "name": "sys/host.session.open@1" },
     { "name": "sys/host.exec@1" },
